--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "license": "AGPL-3.0-or-later",
   "version": "0.0.1",
   "dependencies": {
-    "class-validator": "^0.13.1"
+    "class-validator": "^0.13.1",
+    "reflect-metadata": "^0.1.13",
+    "typedjson": "^1.7.0"
+  },
+  "scripts": {
+    "build": "tsc",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.5",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.4"
   }
 }
