--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "reflect-metadata": "^0.1.13",
     "typedjson": "^1.7.0"
   },
+  "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
+    "postinstall" : "tsc",
+    "clean": "tsc --build --clean",
     "test": "jest"
   },
   "devDependencies": {
@@ -16,5 +19,8 @@
     "jest": "^27.0.5",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
+  },
+  "exports": {
+    "./": "./dist/"
   }
 }
