--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ftcg/core",
   "license": "AGPL-3.0-or-later",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
@@ -22,5 +22,6 @@
   },
   "exports": {
     "./": "./dist/"
-  }
+  },
+  "type": "module"
 }
