--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,6 +4,8 @@
 name: Node.js Package
 
 on:
+  push:
+    branches: [ master ]
   release:
     types: [created]
 
@@ -15,6 +17,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+      - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: yarn test
 
@@ -27,24 +30,8 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+      - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
-      - run: yarn build
-      - run: yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
