--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "reflect-metadata": "^0.1.13",
     "typedjson": "^1.7.0"
   },
+  "private": false,
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
