--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@ftcg/core",
   "license": "AGPL-3.0-or-later",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "dependencies": {
+    "@nestjs/mongoose": "^7.2.4",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "typedjson": "^1.7.0"
@@ -11,13 +12,17 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "postinstall" : "tsc",
+    "postinstall": "tsc",
     "clean": "tsc --build --clean",
     "test": "jest"
   },
   "devDependencies": {
+    "@nestjs/common": "^7.6.18",
+    "@nestjs/core": "^7.6.18",
     "@types/jest": "^26.0.23",
     "jest": "^27.0.5",
+    "mongoose": "^5.12.15",
+    "rxjs": "^7.1.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
   },
