--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "version": "0.0.11",
   "dependencies": {
     "@nestjs/mongoose": "^7.2.4",
+    "bson": "^4.4.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "reflect-metadata": "^0.1.13"
+    "js-sha3": "^0.8.0",
+    "object-hash": "^2.2.0",
+    "reflect-metadata": "^0.1.13",
+    "tweetnacl": "^1.0.3",
+    "typeorm": "^0.2.34"
   },
   "private": false,
   "main": "./dist/index.js",
@@ -19,6 +24,7 @@
     "@nestjs/common": "^7.6.18",
     "@nestjs/core": "^7.6.18",
     "@types/jest": "^26.0.23",
+    "@types/object-hash": "^2.1.1",
     "jest": "^27.0.5",
     "mongoose": "^5.12.15",
     "rxjs": "^7.1.0",
